fix: added padding to stop clear button on inputsets from overlapping. Also fixed padding on selector in modal (#3283)

--- a/src/modules/70-pipeline/components/InputSetSelector/InputSetSelector.module.scss
+++ b/src/modules/70-pipeline/components/InputSetSelector/InputSetSelector.module.scss
@@ -20,6 +20,8 @@
     color: var(--grey-400);
     cursor: pointer;
     visibility: hidden;
+    padding-left: 8px;
+    padding-right: 8px;
 
     &:hover {
       background-color: var(--blue-100);
