--- a/src/modules/70-pipeline/components/RunPipelineModal/RunPipelineModal.module.scss
+++ b/src/modules/70-pipeline/components/RunPipelineModal/RunPipelineModal.module.scss
@@ -163,7 +163,7 @@
 
 .run-modal-form-content {
   max-height: 65vh !important;
-  min-height: 145px;
+  min-height: 130px;
   overflow: scroll !important;
 }
 
